--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <title>Wknd HW DOM</title>
     <script src="js/app.js"></script>
-    <link rel="stylesheet" href="css/main.css">
+    <!-- <link rel="stylesheet" href="css/main.css"> -->
   </head>
   <body>
-    <div id="new-search-form">
-      <div class="search-selection">
-        <form id="form-wraper">
-          <select name="options">
+    <form id="new-search-form">
+      <div class="form-wraper">
+        <div id="form-item">
+          <select id="category">
             <option value="flight">Flight</option>
             <option value="hotel">Hotel</option>
             <option value="flightandhotel">Flight and Hotel</option>
@@ -18,66 +18,53 @@
             <option value="holiday">Holiday Package</option>
           </select>
           <br><br>
-        </form>
-      </div>
+        </div>
 
-      <div class="radio">
-        <form id="flight-form-wraper">
+        <div class="form-item" id="flight-form-wraper">
           <input type="radio" name="tripTypeSelector" value="oneWay"> One Way
           <input type="radio" name="tripTypeSelector" value="return"> Return
-        </form>
-      </div>
+        </div>
 
-      <div class="price-selector">
-        <form id="range-selector">
+        <div class="form-item" id="range-selector">
           <p>Price Range:</p>
           0
           <input type="range" list="tickmarks">
             <datalist id="tickmarks">
               <option value="0" label="0">
-              <!-- <option value="10"> -->
               <option value="20">
-              <!-- <option value="30"> -->
               <option value="40">
-              <!-- <option value="50" label="50"> -->
               <option value="60">
-              <!-- <option value="70"> -->
               <option value="80">
-              <!-- <option value="90"> -->
               <option value="100" label="1000">
             </datalist>
           1000
           <br><br>
-        </form>
-      </div>
+        </div>
 
-      <div class="destination-dates">
-        <form id="destinations">
-          From:<input type="text" name="from">
-          To: <input type="text" name="to">
-        </form>
-        <br>
-        <form id="flight-date">
-          Depart:<input type="date" name="depart">
-          Return:<input type="date" name="return">
-        </form>
-      </div>
+        <div class="form-item">
+          <label for="destinations" id="destinations"></label>
+            From:<input type="text" name="from">
+            To: <input type="text" name="to">
+          <br>
+          <label for="flight-date" id="flight-date"></label>
+            Depart:<input type="date" name="depart">
+            Return:<input type="date" name="return">
+        </div>
 
-      <div class="customer-details">
-        <p>Provide your details for future promotions:</p>
-        <form id="details">
-          First name:<input type="text" name="fname">
-          Last name: <input type="text" name="lname"><
-          Phone number:<input type="tel" name="usrtel">
-          E-mail: <input type="email" name="email">
-        </form>
+        <div class="form-item" id="details">
+          <p>Provide your details for future promotions:</p>
+            First name:<input type="text" name="fname">
+            Last name: <input type="text" name="lname">
+            Phone number:<input type="tel" name="usrtel">
+            E-mail: <input type="email" name="email">
+        </div>
       </div>
-<br>
+      <br>
       <input type="submit" value="Search"/><br>
       <input type="submit" value="Delete All"/><br>
-    </div>
+    </form>
     <hr>
-    <h3>Confirmation results:</h3>
-    <div id="confirmation-list"></div>
+    <h3>Search Results:</h3>
+    <div id="result-list"></div>
   </body>
 </html>
