Add js delete all

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Wknd HW DOM</title>
     <script src="js/app.js"></script>
-    <!-- <link rel="stylesheet" href="css/main.css"> -->
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
     <form id="new-search-form">
@@ -79,10 +79,10 @@
       </div>
 <br>
       <input type="submit" value="Search"/><br>
-      <input type="submit" value="Delete All"/><br>
+      <button id="delete-all">Delete All</button><br>
     </form>
     <hr>
     <h3>Search Results:</h3>
-    <div id="result-list"></div>
+    <div id="result-list">  </div>
   </body>
 </html>
